[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/PointsBoard.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/pw_extended.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Images/green-light.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/gray-light.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/beep-ping.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[node name="PointsBoard" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PlayerOneLabel" type="Label" parent="."]
margin_left = 50.0
margin_top = 120.0
margin_right = 104.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 1 )
text = "J1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTwoLabel" type="Label" parent="."]
margin_left = 907.0
margin_top = 120.0
margin_right = 975.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 1 )
text = "J2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Point1" type="AnimatedSprite" parent="."]
position = Vector2( 80, 270 )
frames = SubResource( 2 )
animation = "off"

[node name="P1Point2" type="AnimatedSprite" parent="."]
position = Vector2( 80, 363 )
frames = SubResource( 2 )
animation = "off"

[node name="P1Point3" type="AnimatedSprite" parent="."]
position = Vector2( 80, 461 )
frames = SubResource( 2 )
animation = "off"

[node name="P2Point1" type="AnimatedSprite" parent="."]
position = Vector2( 944.503, 270 )
frames = SubResource( 2 )
animation = "off"

[node name="P2Point2" type="AnimatedSprite" parent="."]
position = Vector2( 949.265, 363 )
frames = SubResource( 2 )
animation = "off"

[node name="P2Point3" type="AnimatedSprite" parent="."]
position = Vector2( 949.265, 461 )
frames = SubResource( 2 )
animation = "off"

[node name="PointGained" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
